package com.zaozhuang.newborn.data;

public class InputEntity {

    public String key;
    public String value;

    public InputEntity(){

    }

    public InputEntity(String key, String value) {
        this.key = key;
        this.value = value;
    }
}
